v41 Fix red circle visible on Firefox

--- a/cocotte.css
+++ b/cocotte.css
@@ -211,7 +211,7 @@
   height: 390px;
   width: 390px;
   background-color: red;
-  opacity: 0.1;
+  opacity: 0;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
